service: soap: recovered changes lost from JF